--- a/.classpath
+++ b/.classpath
@@ -2,5 +2,10 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="F:/projects/PDFLocker/library/bcmail-jdk16-1.46.jar"/>
+	<classpathentry kind="lib" path="F:/projects/PDFLocker/library/bcprov-jdk16-1.46.jar"/>
+	<classpathentry kind="lib" path="F:/projects/PDFLocker/library/bctsp-jdk16-1.46.jar"/>
+	<classpathentry kind="lib" path="F:/projects/PDFLocker/library/itextpdf-5.2.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/PC/Downloads/opencsv-3.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
